fixed side menu collapse issue

--- a/src/assets/css/SMMenu.scss
+++ b/src/assets/css/SMMenu.scss
@@ -8,6 +8,7 @@
     margin-top: 8px;
     margin-left: 15px;
     color: white;
+    transition:opacity 1s;
 }
 
 .sm-menu-container_title:first-child {
